--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "tulparstudyo/sw-frigian",
+	"name": "swordbros/sw-frigian",
 	"description": "Aimeos sw-frigian extension",
 	"keywords": ["aimeos", "extension"],
 	"type": "aimeos-extension",
